--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -214,11 +214,26 @@ I thank Michalis Moatsos for his help in using his data. I thank Thomas Goumont 
 
 
 \section{Results}
-
-
-
 \subsection{Data}\label{subsec:data}
 
+\subsection{The effect of balanced growth}
+% - Poverty rates and gaps with different growth scenarios: Table 1
+
+\subsection{Antipoverty caps}
+% - Cap to eradicate poverty: minimum of 2.7\$/day in MDG with 7\% growth, 1.74 with trend growth (1\%): Figure 1
+% - would have worked well if it had been 7\% since 2016
+
+\subsection{Antipoverty taxes}
+% By default, 6\% (7?) growth starting in 2023
+% - Tax rate to eradicate poverty: above 7, 18: Figure 2
+% - Even worse when considering Moatsos' BCS line
+
+\subsection{The credible potential of domestic redistribution}
+% - Demogrant that can be funded with a given national tax: Figure 3
+
+\subsection{The potential of global redistribution}
+% - One example of global redistribution (incl. largest recipients/contributors)
+% - Inequality indicators BAU / national / global redistr: Table 2
 
 
 \section{Discussion} 
