--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -217,6 +217,8 @@ I thank Michalis Moatsos for his help in using his data. I thank Thomas Goumont 
 \subsection{Data}\label{subsec:data}
 % Why using PIP compared to alternatives (WIID adjusted to GDP; (GCIP stops in 2013; WID only covers 38 countries with post-tax data))? Most recent data and best estimation of poor's consumption.
 % Not clear which is more accurate between survey and national accounts (Deaton 05), especially in low-income countries, as agricultural production is indirectly measured in national accounts. Also, in Africa, mean conso is similar between national accounts and surveys (Deaton 05). Also, WIID adjust to GDP PPP but we should adjust to national conso, not GDP. Martinez (22) shows that autocracies overestimate GDP growth by 35%. 
+% Prydz et al. (22) argue that NAS are more accurate but show that the discrepancy between survey mean consumption and NAS HFCE is not that large: 22%, and 13.7% for low-income countries. HFCE is broader (and encompasses spending of non-profit entities like NGOs). Also, if one scales up the conso distribution, one should also scale up the poverty line (as it is based on conso surveys): if one does that, poverty rates are on average the same, they change due to variation in survey/NAS discrepancies. 
+% I can adjust to HFCE as robustness check https://data.worldbank.org/indicator/NE.CON.PRVT.PP.KD with the assumption that the extra money is held by the rich (>13$/day), but what about countries with NAS below surveys? TODO: find whether there are such countries
 
 \subsection{The effect of balanced growth}
 % - Poverty rates and gaps with different growth scenarios: Table 1
