realistic growth projections (IMF, reg), Data section

--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -218,7 +218,19 @@ I thank Michalis Moatsos for his help in using his data. I thank Thomas Goumont 
 % Why using PIP compared to alternatives (WIID adjusted to GDP; (GCIP stops in 2013; WID only covers 38 countries with post-tax data))? Most recent data and best estimation of poor's consumption.
 % Not clear which is more accurate between survey and national accounts (Deaton 05), especially in low-income countries, as agricultural production is indirectly measured in national accounts. Also, in Africa, mean conso is similar between national accounts and surveys (Deaton 05). Also, WIID adjust to GDP PPP but we should adjust to national conso, not GDP. Martinez (22) shows that autocracies overestimate GDP growth by 35%. 
 % Prydz et al. (22) argue that NAS are more accurate but show that the discrepancy between survey mean consumption and NAS HFCE is not that large: 22%, and 13.7% for low-income countries. HFCE is broader (and encompasses spending of non-profit entities like NGOs). Also, if one scales up the conso distribution, one should also scale up the poverty line (as it is based on conso surveys): if one does that, poverty rates are on average the same, they change due to variation in survey/NAS discrepancies. 
-% I can adjust to HFCE as robustness check https://data.worldbank.org/indicator/NE.CON.PRVT.PP.KD with the assumption that the extra money is held by the rich (>13$/day), but what about countries with NAS below surveys? TODO: find whether there are such countries
+% I can adjust to HFCE as robustness check https://data.worldbank.org/indicator/NE.CON.PRVT.PP.KD with the assumption that the extra money is held by the rich (>13$/day), 
+The percentiles of each country's income (or consumption) are estimated by the Poverty and Inequality Platform (PIP) of the World Bank (ex-PovcalNet). This data is based on purchasing power parity (PPP) and given in constant 2017 \$. PIP aggregates the most recent household surveys (60\% of countries were surveyed between 2018 and 2021). 
+
+In low-income countries (those of greatest interest to us), PIP provides data on the per capita \textit{consumption} (rather than income). Thereby, the data does not capture services procured by the government. Another potential issue with household surveys is that the aggregate (national) consumption they imply is generally lower than the one estimated in national accounts. This discrepancy comes from measurement errors on both sides: on the one hand, household surveys suffer from underreporting of top incomes and large expenditures; on the other hand, national accounts do not properly account for informal work %and auto-consumption, 
+and tend to inflate agricultural output. % TODO: cite
+Furthermore, authoritarian countries have been shown to produce inflated GDP statistics, except for countries below the GDP threshold of eligibility for preferential loans by the World Bank. % TODO: cite international development association
+While the ratio of Household Final Consumption Expenditures (HFCE) from national accounts is 44\% greater than the aggregate value from household surveys, the ``discrepancy ratio'' is largest for middle-income countries, and is only 12\% for low-income countries. Because household surveys are best suited to estimate consumption by the poorest, we use unadjusted PIP data in our baseline. As a robustness check, we also re-derive our main results after scaling up all incomes by discrepancy ratio (computed using World Bank's data). We do not perform the rescaling on the 15\% of countries with HFCE lower than its aggregate consumption from PIP, and we assume a discrepancy ratio of +12\% for the 20\% of countries lacking data on HFCE. % TODO: cite
+
+As is common in this literature, we assume that each percentile grows at the same rate between the country's survey year and 2030. 
+I rescale incomes by the observed growth of GDP p.c. (in PPP) up to 2022 (using World Bank's data) and by different methods for the 2022--2030 period. 
+These methods include: extending the 2014--2019 growth trend (excluding COVID years); extending the trend for growing countries and assuming no growth when GDP p.c. has contracted between 2014 and 2019; assuming a constant growth (of either 0\%, 3\%, 4.5\%, 6\%, or 7\%); using IMF forecasts (extended up to 2030 by replicating the 2026--2028 forecasted growth in 2028--2030); projecting future growth using a quadratic model that predicts the 2011--2019 growth based on the 1991-2011 growth (then applied to 2022--2030 using the 2002--2022 growth). I deviate from this two-step procedure assess the original SDG goal, as I assume a constant growth of 7\% starting in 2015.
+
+
 
 \subsection{The effect of balanced growth}
 % - Poverty rates and gaps with different growth scenarios: Table 1
