--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -239,7 +239,7 @@ These methods include: extending the 2014--2019 growth trend (which excludes COV
 % - Poverty rates and gaps with different growth scenarios: Table 1
 % This assumption is the same than PIP's https://pip.worldbank.org/about
 
-To estimate global poverty rates, the World Bank scales up the percentiles measured in household surveys by the country's GDP growth between the survey year and the year of interest. I project global poverty rates and poverty gaps in 2030 using the same assumption of balanced growth, for a range of growth scenarios (Table \ref{tab:poverty_rates}).
+To estimate global poverty rates, the World Bank scales up the percentiles measured in household surveys by the country's GDP growth between the survey year and the year of interest. I project global poverty rates and poverty gaps in 2030 using the same assumption of balanced growth, for a range of growth scenarios (Table \ref{tab:poverty}).
 
 \subsection{Antipoverty caps}
 % - Cap to eradicate poverty: minimum of 2.7\$/day in MDG with 7\% growth, 1.74 with trend growth (1\%): Figure 1
