--- a/tables/poverty_full.tex
+++ b/tables/poverty_full.tex
@@ -1,6 +1,6 @@
 \begin{table}[h]
 
-\caption{\label{tab:poverty}Global poverty rates and poverty gaps in 2030 under different growth scenarios. Poverty rates are expressed in \% of world population and poverty gaps in \% of world GDP. Poverty lines are in PPP \$/day.}
+\caption{\label{tab:poverty_full}Global poverty rates and poverty gaps in 2030 under different growth scenarios. Poverty rates are expressed in \% of world population and poverty gaps in \% of world GDP. Poverty lines are in PPP \$/day.}
 \centering
 \begin{tabular}[t]{lrrrrrr}
 \toprule Growth scenario & \multicolumn{3}{c}{Poverty rate} & \multicolumn{3}{c}{Poverty gap} \\ 
@@ -8,8 +8,13 @@
 \midrule
 2022 Estimate & 7.4 & 21.4 & 45.3 & 0.25 & 1.35 & 7.10\\
 Trend (2014--2019) & 6.3 & 14.4 & 35.3 & 0.18 & 0.81 & 4.21\\
+Max(Trend, 0) & 6.3 & 14.2 & 34.5 & 0.17 & 0.78 & 4.14\\
+IMF forecast & 5.1 & 14.1 & 34.8 & 0.17 & 0.80 & 4.36\\
 Autoregressive projection & 6.1 & 15.0 & 37.8 & 0.17 & 0.85 & 4.76\\
+0\% growth & 10.1 & 25.5 & 49.3 & 0.38 & 1.92 & 9.26\\
 3\% growth & 5.2 & 15.3 & 38.5 & 0.14 & 0.74 & 4.41\\
+4.5\% growth & 4.4 & 12.3 & 33.3 & 0.09 & 0.51 & 3.26\\
+6\% growth & 3.1 & 9.3 & 28.6 & 0.06 & 0.36 & 2.39\\
 7\% growth & 3.1 & 8.5 & 25.4 & 0.05 & 0.28 & 1.93\\
 7\% growth since 2015 & 1.1 & 3.1 & 16.5 & 0.01 & 0.08 & 0.73\\
 \bottomrule
