--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -246,7 +246,6 @@ My estimates of 2022 global poverty rates closely align with the 2019 estimates 
 The poverty gap is the cost that separates people below the poverty line from that line. For example, if 10\% of the population earns 1.65\$/day and 90\% of the population earns more than 2.15\$/day, the poverty gap is $0.1 \cdot (2.15 - 1.65) = 0.05\$/\text{day}$. 
 I estimate the extreme poverty gap at 0.25\% of the world GDP. This is a first approximation of what it would cost to lift everyone out of extreme poverty, defined with the \$2.15/day poverty line. 
 
-
 Assuming that each country will continue to grow at the same rate as in the recent past, %grow over 2022--2030 at the same rate as over 2014--2019, %a balanced growth for 2022--2030 at the rate observed in the country over 2014--2019, 
 I estimate that 6\% of the world population will live in extreme poverty in 2030. I find very similar estimates using a simple yet realistic model to predict a country's growth (an autoregressive projection based on its growth over the last 20 years). 
 % With a balanced growth at a rate of 3\% in each country, extreme poverty would decline slightly more than in the realistic projections, at 5\%.
@@ -254,14 +253,34 @@ If each country grows by 3\% each year, extreme poverty would decline slightly m
 Although steady growth reduces poverty, growth alone cannot achieve the first SDG: If the world grows by 7\% each year, the extreme poverty rate would still be 3\% in 2030. Even if the world had experienced a 7\% growth rate starting in 2015 (when the SDGs were adopted), extreme poverty would not be completely eliminated, at 1\% of the world population in 2030. 
 As we cannot rely on growth alone to eliminate poverty, let us add domestic redistribution to the equation.
 
+\subsection{Idealized redistributive policies}
+
+Studying the arithmetics of inequality at the country level, I use the poverty gap to approximate the revenues required to eliminate poverty. 
+In other words, I consider taxes on top incomes to finance a transfer to the poorest that would lift them at the poverty line. I consider two types of redistributive policies to close the poverty gap: (i) an ``antipoverty cap'' that would establish a ceiling on top incomes (and tax income at a 100\% rate above that threshold); (ii) an ``antipoverty tax'' that would raise a linear tax above a certain threshold. 
+
+These policies are idealized and the estimate of revenue they generate should be seen as an upper bound of what could be achieved in practice, if they were implemented. First, I ignore any costs associated with raising a tax or transferring money, as if the lowest-income countries already had sufficient administrative resources. Second, any tax (and a fortiori a 100\% tax) reduces economic activity (real or declared). In this exercise, I abstract from tax distorsions and assume that the policies would not affect the taxable base.
+
+If it were possible to expropriate top income individuals 
+without reducing their economic activity, capping top incomes to finance an income floor would eliminate poverty at the lowest welfare cost. 
+However, to protect private property and diminish the deterring effect on economic activity, governments would rather tax at a lower rate (than 100\%) and on a broader base (starting at a threshold deemed reasonable). 
+Therefore, both the antipoverty cap and the antipoverty tax can be thought as rough but revealing approximations of the capacity to mobilize domestic resources.
+% To fill the poverty gap at the least welfare cost, the cost should be borne by the wealthiest. Indeed, 
+% If it were possible to expropriate top income individuals without reducing their economic activity, the welfare-maximizing transfer would consist of capping top incomes to finance an income floor. 
+% Although in reality, an income cap would deter (declared) activity, %but abstracting from the distorsive aspect of the policy, 
+% the income cap required to close the poverty gap can be used as a rough but revealing approximation of the capacity to mobilize national resources. 
+
+With PIP data, we measure household consumption rather than income, meaning that we do not capture investment nor government spending. In other words, our idealized policies would leave productive investment and public services unaffected, an appropriate treatment given that these channels already contribute to growth and poverty reduction.
+
+Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%. I choose this rate as a baseline as an upper bound of growth rates recently experienced in the lowest-income countries. Among the 8 countries with an average consumption below 3\$/day, growth was on average negative over 2014--2019 (or 2014--2022), and the highest growing country (Central African Republic) grew at a rate of 2.4\% per year. 
+
 \subsection{Antipoverty caps}
 
-To fill the poverty gap at the least welfare cost, the cost should be borne by the wealthiest. 
-Indeed, if it were possible to expropriate top income individuals 
-without reducing their activity, the welfare-maximizing transfer would consist of capping top incomes to finance an income floor. 
-In reality, an income cap would deter economic activity, but abstracting from the distorsive aspect of the policy, the income cap required to fill the poverty gap can be used as a coarse but telling proxy for the capacity of domestic resource mobilization. 
-
-Taking as a baseline the scenario with a balanced growth at a rate of 3\%, I estimate the income cap that each country should impose to fill the extreme poverty gap with the exproriated income (Figure \ref{fig:antipoverty_cap}). In Madagascar, the average income would fall short of \$2.15/day in this scenario, at \$2.02/day. Given that Madagascar grew at 1\% per year between 2014 and 2019, ...
+I estimate the income cap that each country should impose to fill the extreme poverty gap with the exproriated income (Figure \ref{fig:antipoverty_cap}). 
+In some countries like the D.R.C., even capping incomes at \$7/day would not suffice to raise revenues equal to the extreme poverty gap, despite a steady growth of 3\% per year between 2022 and 2030. 
+In a very optimistic scenario of 7\% growth, the antipoverty cap would be \$14/day in the D.R.C. Also, note that there is no indication that the resources of this country are underestimated, as the aggregate consumption from household surveys is greater than HFCE from national accounts for the D.R.C. 
+Besides, the D.R.C. is not the poorest country. 
+In Madagascar, the average consumption would fall short of \$2.15/day in the baseline scenario, at \$2.02/day. This means that even with extreme redistribution, Madagascar does not have the domestic resources needed to eliminate extreme poverty by 2030. 
+To give a last example of the shortfall of resources in the lowest-income countries, the antipoverty cap for Burundi in the scenario of 7\% growth would need to be as low as 8.60\$/day. 
 
 \begin{figure}[h]
 \caption{Income cap eradicating extreme poverty (in \$/day). In this idealized policy, all income above the cap is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. %abstracting away from distorsions and implementation costs. Growth is 3\% over 2022--2030.
@@ -269,13 +288,12 @@ Taking as a baseline the scenario with a balanced growth at a rate of 3\%, I est
 \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
 {../figures/y_expropriated_2_average.pdf}}
 \end{figure}
-% - Cap to eradicate poverty: minimum of 2.7\$/day in MDG with 7\% growth, 1.74 with trend growth (1\%): Figure 1
-% - would have worked well if it had been 7\% since 2016
 
 \subsection{Antipoverty taxes}
 % By default, 6\% (7?) growth starting in 2023 
 % - Tax rate to eradicate poverty: above 7, 18: Figure 2
 % - Even worse when considering Moatsos' BCS line
+% - would have worked well if it had been 7\% since 2016
 
 % antipoverty_2_tax_7_average
 % antipoverty_2_tax_18_very_optimistic
