--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -290,16 +290,46 @@ To give a last example of the shortfall of resources in the lowest-income countr
 \end{figure}
 
 \subsection{Antipoverty taxes}
+
+Figure \ref{fig:antipoverty_tax_7} presents the (additional) tax rate above \$6.85/day required to generate enough revenues to close the domestic extreme poverty gap, in the baseline scenario of 
+3\% growth. The threshold of \$6.85/day corresponds to a poverty line defined by the World Bank, which can be understood as the consumption level that can sustain a minimally decent life.\cite{hickel_is_2019,kikstra_decent_2021} In contrast, the extreme poverty line of \$2.15/day corresponds to the consumption per capita below which one is undernourished.\cite{allen_absolute_2017} 
+
+\begin{figure}[h]
+  \caption{Linear tax rate above \$6.85/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 3\% over 2022--2030. 
+  }\label{fig:antipoverty_tax_7}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_2_tax_7_average.pdf}}
+\end{figure}
+
+Consistently with the previous findings, taxing income at a 100\% rate above \$6.85/day would not generate enough revenues to eliminate extreme poverty in the five poorest countries. In Nigeria, closing the extreme poverty rate would require taxing the ``non-needy'' at a marginal rate of 20\%. On average over Sub-Saharan Africa, the anti-extreme-poverty tax would be 49\%, and 64\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
+
+In most of the paper, we focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty. % TODO cite
+First, this poverty line is too low to procure just a healthy diet, it is barely sufficient to satisfy one's caloric requirements. Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of the average consumption basket rather than on prices of subsistence goods.\cite{sullivan_capitalist_2023} Therefore, the cost of a subsistence diet varies across countries, e.g. at \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$).\cite{moatsos_global_2016} Buidling on earlier work by Robert Allen,\cite{allen_absolute_2017} Michail Moatsos computes a country-specific poverty line by estimating the local price of the cheapest diet that meets caloric and protein requirements and of an allowance of  
+
+Figure \ref{fig:antipoverty_tax_18} presents the anti-extreme-poverty tax on incomes above \$18.15/day, in a very optimistic scenario of 7\% growth. The threshold of \$18.15/day per person corresponds to the U.S. federal poverty line for a family of four and represents a more realistic threshold above which taxes could be increased in the Global South. The anti-extreme-poverty tax rates on the ``non-poor'' in this 7\% growth scenario are comparable to the rates on the non-needy in the baseline scenario. In India, the required tax rate would be \% in the scenario of 7\% growth, and \% if growth until 2030 replicates the 2014--2019 trend. % TODO
+The contribution required of the Indian non-poor seems significant but not unreasonable. Therefore, India seems able to eliminate extreme poverty by 2030 with its domestic resources. The same thing cannot be said of Sub-Saharan Africa. %Therefore, lower-middle income countries like India seem able to eliminate extreme poverty by 2030 with its domestic resources. The same thing cannot be said of low-income countries, most of them in Sub-Saharan Africa. %
+
 % By default, 6\% (7?) growth starting in 2023 
 % - Tax rate to eradicate poverty: above 7, 18: Figure 2
 % - Even worse when considering Moatsos' BCS line
-% - would have worked well if it had been 7\% since 2016
 
-% antipoverty_2_tax_7_average
-% antipoverty_2_tax_18_very_optimistic
+\begin{figure}[h]
+  \caption{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030.
+  }\label{fig:antipoverty_tax_18}
+  \makebox[\textwidth][c]{\includegraphics[width=\textwidth]
+  {../figures/antipoverty_2_tax_18_very_optimistic.pdf}}
+\end{figure}
 
 \subsection{The credible potential of domestic redistribution}
-% - Demogrant that can be funded with a given national tax: Figure 3
+% - Demogrant that can be funded with a given national tax: 5% above 7$  Figure 3
+% - would have worked well if it had been 7\% since 2016
+
+
+
+At least two of the SDGs spell out how the elimination of extreme poverty could be funded. % https://sdgs.un.org/2030agenda
+First, the target 8.1 aims for ``at least 7 per cent gross domestic product growth per annum in the least developed countries''. % TODO: the previous tax would have been sufficient in the sdg8 scenario except in Madagascar, where a tax of 23% would have been required. In other words, a sustained high growth would have permitted the least developed countries to eliminate extreme poverty through the mobilization of their domestic resources. However, high growth has never materialized in these countries. 
+Second, the target 17.2 calls for ``Developed countries to implement fully their official development assistance commitments, including the commitment by many developed countries to achieve the target of 0.7 per cent of ODA/GNI to developing countries and 0.15 to 0.20 per cent of ODA/GNI to least developed countries'' (LDCs). Foreign aid falls short of both the overall target (at 0.36\% of developed countries' GNI) and the LDCs' target (at 0.06\%). Although European countries taken together respect their commitment, the other do not. In particular, the U.S. only allocates 0.22\% of its GNI to foreign aid.\cite{oecd_oda_2023} The global extreme poverty gap (0.17\% of global real GDP) is a bit lower than the shortfall of foreign aid relative to the target (0.2\% of global nominal GDP), suggesting that extreme poverty could be eradicated if developed countries respected their commitment. % OECD (high-income) countries represent 59% (61%) of the world nominal GDP, so shortfall of aid is 0.34*0.59=0.2% of global GDP in nominal. https://data.worldbank.org/indicator/NY.GDP.MKTP.CD
+% TODO? To meet the broader SDGs and ``end poverty in all its forms'', the 0.7\% target would not suffice and global redistribution would need to be significantly increased. 
 
 \subsection{The potential of global redistribution}
 % - One example of global redistribution (incl. largest recipients/contributors)
