--- a/tables/poverty.tex
+++ b/tables/poverty.tex
@@ -2,16 +2,16 @@
 
 \caption{\label{tab:poverty}Global poverty rates and poverty gaps in 2030 under different growth scenarios. Poverty rates are expressed in \% of world population and poverty gaps in \% of world GDP. Poverty lines are in PPP \$/day.}
 \centering
-\begin{tabular}[t]{lrrrrrr}
-\toprule Growth scenario & \multicolumn{3}{c}{Poverty rate} & \multicolumn{3}{c}{Poverty gap} \\ 
- (Poverty line in \$/day)  & 2.15 & 3.65 & 6.85 & 2.15 & 3.65 & 6.85\\
+\begin{tabular}[t]{lrrrrrrrr}
+\toprule Growth scenario & \multicolumn{4}{c}{Poverty rate (\%)} & \multicolumn{4}{c}{Poverty gap (\% of GDP)} \\ 
+ (Poverty line in \$/day)  & 2.15 & 3.65 & 6.85 & 18.15 & 2.15 & 3.65 & 6.85 & 18.15\\
 \midrule
-2022 Estimate & 7.4 & 21.4 & 45.3 & 0.25 & 1.35 & 7.10\\
-Trend (2014--2019) & 6.3 & 14.4 & 35.3 & 0.18 & 0.81 & 4.21\\
-Autoregressive projection & 6.1 & 15.0 & 37.8 & 0.17 & 0.85 & 4.76\\
-3\% growth & 5.2 & 15.3 & 38.5 & 0.14 & 0.74 & 4.41\\
-7\% growth & 3.1 & 8.5 & 25.4 & 0.05 & 0.28 & 1.93\\
-7\% growth since 2015 & 1.1 & 3.1 & 16.5 & 0.01 & 0.08 & 0.73\\
+2022 Estimate & 7.4 & 21.4 & 45.3 & 73.3 & 0.25 & 1.35 & 7.10 & 43.75\\
+Trend (2014--2019) & 6.3 & 14.4 & 35.3 & 67.2 & 0.18 & 0.81 & 4.21 & 30.86\\
+Autoregressive projection & 6.1 & 15.0 & 37.8 & 66.3 & 0.17 & 0.85 & 4.76 & 33.04\\
+3\% growth & 5.2 & 15.3 & 38.5 & 68.5 & 0.14 & 0.74 & 4.41 & 31.70\\
+7\% growth & 3.1 & 8.5 & 25.4 & 60.8 & 0.05 & 0.28 & 1.93 & 18.33\\
+7\% growth since 2015 & 1.1 & 3.1 & 16.5 & 52.5 & 0.01 & 0.08 & 0.73 & 10.25\\
 \bottomrule
 \end{tabular}
 \end{table}
