--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -1,3 +1,11 @@
+@article{allen_absolute_2017,
+  title = {Absolute {{Poverty}}: {{When Necessity Displaces Desire}}},
+  author = {Allen, Robert C.},
+  year = {2017},
+  url = {https://www.economics.ox.ac.uk/materials/papers/14420/141marchallen.pdf},
+  annotation = {00000}
+}
+
 @article{alvaredo_methods_2021,
   title = {Methods and {{Concepts Used}} in the {{World Inequality Database}}},
   author = {Alvaredo, Facundo and Atkinson, Anthony B and Bauluz, Luis and {Fisher-Post}, Matthew and Blanchet, Thomas and Chancel, Lucas and Flores, Ignacio and Morgan, Marc and Garbinti, Bertrand and {Goupille-Lebret}, Jonathan and {Mart{\'i}nez-Toledano}, Clara and Neef, Theresa and Piketty, Thomas and Robilliard, Anne-Sophie and Saez, Emmanuel and Yang, Li and Zucman, Gabriel},
@@ -310,6 +318,21 @@
   url = {http://www.ssrn.com/abstract=2593894}
 }
 
+@article{hickel_is_2019,
+  title = {Is It Possible to Achieve a Good Life for All within Planetary Boundaries?},
+  author = {Hickel, Jason},
+  year = {2019},
+  month = jan,
+  journal = {Third World Quarterly},
+  volume = {40},
+  number = {1},
+  pages = {18--35},
+  publisher = {{Routledge}},
+  issn = {0143-6597},
+  doi = {10.1080/01436597.2018.1535895},
+  url = {https://doi.org/10.1080/01436597.2018.1535895}
+}
+
 @article{hickel_true_2016,
   title = {The True Extent of Global Poverty and Hunger: Questioning the Good News Narrative of the {{Millennium Development Goals}}},
   shorttitle = {The True Extent of Global Poverty and Hunger},
@@ -396,6 +419,21 @@
   url = {https://ideas.repec.org//a/spr/revint/v12y2017i1d10.1007\_s11558-015-9239-3.html}
 }
 
+@article{kikstra_decent_2021,
+  title = {Decent Living Gaps and Energy Needs around the World},
+  author = {Kikstra, Jarmo S. and Mastrucci, Alessio and Min, Jihoon and Riahi, Keywan and Rao, Narasimha D.},
+  year = {2021},
+  month = sep,
+  journal = {Environmental Research Letters},
+  volume = {16},
+  number = {9},
+  pages = {095006},
+  publisher = {{IOP Publishing}},
+  issn = {1748-9326},
+  doi = {10.1088/1748-9326/ac1c27},
+  url = {https://dx.doi.org/10.1088/1748-9326/ac1c27}
+}
+
 @article{lahoti_global_2016,
   title = {The {{Global Consumption}} and {{Income Project}} ({{GCIP}}): {{An Overview}}},
   shorttitle = {The {{Global Consumption}} and {{Income Project}} ({{GCIP}})},
@@ -423,6 +461,20 @@
   publisher = {{World Bank, Washington, DC}},
   doi = {10.1596/1813-9450-6719},
   url = {http://hdl.handle.net/10986/16935}
+}
+
+@techreport{lakner_how_2019,
+  type = {Working {{Paper}}},
+  title = {How {{Much Does Reducing Inequality Matter}} for {{Global Poverty}}?},
+  author = {Lakner, Christoph and Mahler, Daniel Gerszon and Negre, Mario and Prydz, Espen Beer},
+  year = {2019},
+  month = may,
+  address = {{Washington, DC}},
+  institution = {{World Bank}},
+  doi = {10.1596/1813-9450-8869},
+  url = {https://openknowledge.worldbank.org/handle/10986/31796},
+  copyright = {http://creativecommons.org/licenses/by/3.0/igo},
+  annotation = {Accepted: 2019-06-06T14:16:40Z}
 }
 
 @article{lakner_how_2022,
@@ -580,6 +632,13 @@
   copyright = {{\textcopyright} 2018 International Association for Research in Income and Wealth}
 }
 
+@techreport{oecd_oda_2023,
+  title = {{{ODA Levels}} in 2022},
+  author = {OECD, .},
+  year = {2023},
+  url = {https://www.oecd.org/dac/financing-sustainable-development/ODA-2022-summary.pdf}
+}
+
 @article{ortiz_universal_2018,
   title = {Universal {{Basic Income Proposals}} in {{Light}} of {{ILO Standards}}: {{Key Issues}} and {{Global Costing}}},
   shorttitle = {Universal {{Basic Income Proposals}} in {{Light}} of {{ILO Standards}}},
@@ -623,20 +682,6 @@
 }
 
 @article{prydz_disparities_2022,
-  title = {Disparities in {{Assessments}} of {{Living Standards Using National Accounts}} and {{Household Surveys}}},
-  author = {Prydz, Espen Beer and Jolliffe, Dean and Serajuddin, Umar},
-  year = {2022},
-  journal = {Review of Income and Wealth},
-  volume = {68},
-  number = {S2},
-  pages = {S385-S420},
-  issn = {1475-4991},
-  doi = {10.1111/roiw.12577},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12577},
-  copyright = {{\textcopyright} 2022 International Association for Research in Income and Wealth}
-}
-
-@article{prydz_disparities_2022-1,
   title = {Disparities in {{Assessments}} of {{Living Standards Using National Accounts}} and {{Household Surveys}}},
   author = {Prydz, Espen Beer and Jolliffe, Dean and Serajuddin, Umar},
   year = {2022},
