--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -289,6 +289,9 @@ To give a last example of the shortfall of resources in the lowest-income countr
 {../figures/y_expropriated_2_average.pdf}}
 \end{figure}
 
+In most of the paper, we focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty. % TODO cite
+First, this poverty line is too low to procure just a healthy diet, it is barely sufficient to satisfy one's caloric requirements. Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of the average consumption basket rather than on prices of subsistence goods.\cite{sullivan_capitalist_2023} Therefore, the cost of a subsistence diet varies across countries, e.g. at \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$).\cite{moatsos_global_2016} Buidling on earlier work by Robert Allen,\cite{allen_absolute_2017} Michail Moatsos computes a country-specific poverty line by estimating the local price of the cheapest diet that meets caloric and protein requirements, completed with a ration of fat, sugar, and basic non-food requirements.\cite{moatsos_global_2016,moatsos_global_2021,sullivan_capitalist_2023} Despite missing data in many countries (including India and the D.R.C.), 14 countries have an average consumption level below this basic consumption (or \textit{BCS}) poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient domestic resources to lift their population above the BCS poverty line, equal to \$4.35/day in median, even after extreme internal redistribution.
+
 \subsection{Antipoverty taxes}
 
 Figure \ref{fig:antipoverty_tax_7} presents the (additional) tax rate above \$6.85/day required to generate enough revenues to close the domestic extreme poverty gap, in the baseline scenario of 
@@ -302,9 +305,6 @@ Figure \ref{fig:antipoverty_tax_7} presents the (additional) tax rate above \$6.
 \end{figure}
 
 Consistently with the previous findings, taxing income at a 100\% rate above \$6.85/day would not generate enough revenues to eliminate extreme poverty in the five poorest countries. In Nigeria, closing the extreme poverty rate would require taxing the ``non-needy'' at a marginal rate of 20\%. On average over Sub-Saharan Africa, the anti-extreme-poverty tax would be 49\%, and 64\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
-
-In most of the paper, we focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty. % TODO cite
-First, this poverty line is too low to procure just a healthy diet, it is barely sufficient to satisfy one's caloric requirements. Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of the average consumption basket rather than on prices of subsistence goods.\cite{sullivan_capitalist_2023} Therefore, the cost of a subsistence diet varies across countries, e.g. at \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$).\cite{moatsos_global_2016} Buidling on earlier work by Robert Allen,\cite{allen_absolute_2017} Michail Moatsos computes a country-specific poverty line by estimating the local price of the cheapest diet that meets caloric and protein requirements and of an allowance of  
 
 Figure \ref{fig:antipoverty_tax_18} presents the anti-extreme-poverty tax on incomes above \$18.15/day, in a very optimistic scenario of 7\% growth. The threshold of \$18.15/day per person corresponds to the U.S. federal poverty line for a family of four and represents a more realistic threshold above which taxes could be increased in the Global South. The anti-extreme-poverty tax rates on the ``non-poor'' in this 7\% growth scenario are comparable to the rates on the non-needy in the baseline scenario. In India, the required tax rate would be \% in the scenario of 7\% growth, and \% if growth until 2030 replicates the 2014--2019 trend. % TODO
 The contribution required of the Indian non-poor seems significant but not unreasonable. Therefore, India seems able to eliminate extreme poverty by 2030 with its domestic resources. The same thing cannot be said of Sub-Saharan Africa. %Therefore, lower-middle income countries like India seem able to eliminate extreme poverty by 2030 with its domestic resources. The same thing cannot be said of low-income countries, most of them in Sub-Saharan Africa. %
@@ -323,8 +323,6 @@ The contribution required of the Indian non-poor seems significant but not unrea
 \subsection{The credible potential of domestic redistribution}
 % - Demogrant that can be funded with a given national tax: 5% above 7$  Figure 3
 % - would have worked well if it had been 7\% since 2016
-
-
 
 At least two of the SDGs spell out how the elimination of extreme poverty could be funded. % https://sdgs.un.org/2030agenda
 First, the target 8.1 aims for ``at least 7 per cent gross domestic product growth per annum in the least developed countries''. % TODO: the previous tax would have been sufficient in the sdg8 scenario except in Madagascar, where a tax of 23% would have been required. In other words, a sustained high growth would have permitted the least developed countries to eliminate extreme poverty through the mobilization of their domestic resources. However, high growth has never materialized in these countries. 
