--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -289,8 +289,12 @@ To give a last example of the shortfall of resources in the lowest-income countr
 {../figures/y_expropriated_2_average.pdf}}
 \end{figure}
 
-In most of the paper, we focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty. % TODO cite
-First, this poverty line is too low to procure just a healthy diet, it is barely sufficient to satisfy one's caloric requirements. Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of the average consumption basket rather than on prices of subsistence goods.\cite{sullivan_capitalist_2023} Therefore, the cost of a subsistence diet varies across countries, e.g. at \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$).\cite{moatsos_global_2016} Buidling on earlier work by Robert Allen,\cite{allen_absolute_2017} Michail Moatsos computes a country-specific poverty line by estimating the local price of the cheapest diet that meets caloric and protein requirements, completed with a ration of fat, sugar, and basic non-food requirements.\cite{moatsos_global_2016,moatsos_global_2021,sullivan_capitalist_2023} Despite missing data in many countries (including India and the D.R.C.), 14 countries have an average consumption level below this basic consumption (or \textit{BCS}) poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient domestic resources to lift their population above the BCS poverty line, equal to \$4.35/day in median, even after extreme internal redistribution.
+In most of the paper, I focus on the definition of extreme poverty employed in the first SDG. However, the \$2.15 threshold has been criticized for inaccurately measuring poverty. % TODO cite
+First, this poverty line %is too low to procure just a healthy diet, it is 
+barely sufficient to satisfy one's caloric requirements and is too low to procure a healthy diet or non-food necessities. 
+Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of an average consumption basket rather than on prices of subsistence goods.\cite{sullivan_capitalist_2023} Therefore, the cost of a subsistence diet varies across countries. For instance, it is \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$).\cite{moatsos_global_2016} Buidling on earlier work by Robert Allen that addresses these issues,\cite{allen_absolute_2017} Michail Moatsos computes a country-specific poverty line. This basic consumption (or \textit{BCS}) poverty line corresponds to the local price of the cheapest diet that meets caloric and protein requirements, completed with a ration of fat, sugar, and basic non-food requirements.\cite{moatsos_global_2016,moatsos_global_2021,sullivan_capitalist_2023} This alternative measure indicates that poverty % destitution?
+is more prevalent than the official poverty line suggests. Despite missing data in many countries (including India and the D.R.C.), 14 countries have an average consumption level below this basic consumption poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient domestic resources to lift their population above the BCS poverty line, equal to \$4.35/day in median, even after extreme internal redistribution. 
+% - Even worse when considering Moatsos' BCS line
 
 \subsection{Antipoverty taxes}
 
@@ -311,7 +315,6 @@ The contribution required of the Indian non-poor seems significant but not unrea
 
 % By default, 6\% (7?) growth starting in 2023 
 % - Tax rate to eradicate poverty: above 7, 18: Figure 2
-% - Even worse when considering Moatsos' BCS line
 
 \begin{figure}[h]
   \caption{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030.
